# yk

./: .gitignore  CLAUDE.md  yourkids-development-plan.md
Website redesign suggestions/: .thumbnail  Developer Brief - Warm & Playful.dc.html  YourKids Redesign Options.dc.html
docs/: 17-kids-typing-games.md  activity-generator-plan.md  app-ideas-research.md  engine-build-log.md  features-revenue-presentation.html  features-revenue-research.md  (+10 more)
engine/: .env.example  .gitignore  pyproject.toml
engine/config/: competitors.yaml  data_maintenance.yaml  settings.yaml  site_bible.md  sources.yaml
engine/deploy/: DEPLOY.md  backup.sh  healthcheck.py  yourkids-engine.service
engine/src/: main.py
engine/src/bible/: manager.py
engine/src/db/: __init__.py  migrations.py  models.py
engine/src/decay/: checker.py
engine/src/llm/: client.py  fencing.py
engine/src/media/: __init__.py  illustrate.py  unsplash.py
engine/src/planner/: planner.py
engine/src/publisher/: publisher.py
engine/src/scanner/: competitive.py  extractor.py  rss.py  web.py
engine/src/synthesis/: editorial.py  trends.py
engine/src/triage/: triage.py
engine/src/utils/: clock.py  config.py  git.py  hashing.py  lock.py  notify.py  paths.py  schedule.py
engine/src/writer/: editor.py  writer.py
engine/tests/: conftest.py  test_data_review.py  test_editor.py  test_fencing.py  test_llm_client.py  test_lock.py  test_media.py  test_models.py  test_notify.py  test_paths.py  test_pipeline.py  test_planner.py  test_publisher.py  test_scanner.py  test_schedule.py  test_triage.py  test_writer.py
(+163 files in other folders)
