[project]
name = "yourkids-engine"
version = "0.1.0"
description = "Editorial engine for yourkids.com"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "httpx",
    "feedparser",
    "trafilatura",
    "pyyaml",
    "python-dotenv",
    "apscheduler",
    "gitpython",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "respx",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
